--- a/buildspec.yml
+++ b/buildspec.yml
@@ -10,6 +10,7 @@ phases:
     commands:
       - echo Install completed on 'date'
       - echo Build started on 'date'
+      - ./server/node_modules/.bin/jasmine init
       - npm test --prefix ./server
   post_build:
     commands:
@@ -19,4 +20,5 @@ artifacts:
   files:
     - ./server.zip
     - ./appspec.yml
+    - ./scripts/*
   discard-paths: yes
