--- a/server/package.json
+++ b/server/package.json
@@ -4,13 +4,15 @@
   "description": "rest api for hrs-statutes app.",
   "main": "app.js",
   "scripts": {
-    "test": "jasmine"
+    "test": "jasmine",
+    "start": "node server.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "elasticsearch": "^13.3.1",
-    "express": "^4.15.4"
+    "express": "^4.15.4",
+    "mongoose": "^4.11.9"
   },
   "devDependencies": {
     "jasmine": "^2.8.0"
