--- a/appspec.yml
+++ b/appspec.yml
@@ -6,5 +6,8 @@ files:
 hooks:
   AfterInstall:
     - location: ./unzip.sh
-      timeout: 300
+      timeout: 150
+      runas: ec2-user
+    - location: ./start.sh
+      timeout: 150
       runas: ec2-user
