--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "test": "jasmine",
-    "start": "forever start server.js",
+    "start": "forever --watch start server.js",
     "stop": "forever stop server.js"
   },
   "author": "",
