--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bluebird": "^3.5.0",
     "elasticsearch": "^13.3.1",
     "express": "^4.15.4",
     "mongoose": "^4.11.9"
