--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "@angular/http": "4.1.3",
     "@angular/platform-browser": "4.1.3",
     "@angular/platform-browser-dynamic": "4.1.3",
+    "@ionic-native/camera": "^4.2.1",
     "@ionic-native/camera-preview": "^4.2.1",
     "@ionic-native/core": "3.12.1",
     "@ionic-native/splash-screen": "3.12.1",
@@ -33,6 +34,7 @@
     "cordova-plugin-statusbar": "^2.2.2",
     "cordova-plugin-whitelist": "^1.3.1",
     "ionic-angular": "3.6.0",
+    "ionic-native": "^2.9.0",
     "ionic-plugin-keyboard": "^2.2.1",
     "ionicons": "3.0.0",
     "rxjs": "5.4.0",
