--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
     "bluebird": "^3.5.0",
     "elasticsearch": "^13.3.1",
     "express": "^4.15.4",
+    "memory-cache": "^0.2.0",
     "mongoose": "^4.11.9"
   },
   "devDependencies": {
