--- a/client/ionic.config.json
+++ b/client/ionic.config.json
@@ -1,6 +1,6 @@
 {
   "name": "hrs_mobile",
-  "app_id": "",
+  "app_id": "d01eb1e4",
   "type": "ionic-angular",
   "integrations": {
     "cordova": {}
