--- a/client/package.json
+++ b/client/package.json
@@ -27,6 +27,7 @@
         "@ionic-native/splash-screen": "3.12.1",
         "@ionic-native/status-bar": "3.12.1",
         "@ionic/storage": "2.0.1",
+        "cordova-android": "^6.2.3",
         "cordova-ios": "^4.5.0",
         "cordova-plugin-camera-preview": "^0.9.0",
         "cordova-plugin-compat": "^1.1.0",
@@ -63,6 +64,7 @@
             }
         },
         "platforms": [
+            "android",
             "ios"
         ]
     }
