--- a/client/package.json
+++ b/client/package.json
@@ -43,7 +43,8 @@
         "ionicons": "3.0.0",
         "rxjs": "5.4.0",
         "sw-toolbox": "3.6.0",
-        "zone.js": "0.8.12"
+        "zone.js": "0.8.12",
+        "cordova-plugin-camera": "~2.4.1"
     },
     "devDependencies": {
         "@ionic/app-scripts": "2.1.4",
