--- a/client/package.json
+++ b/client/package.json
@@ -28,7 +28,9 @@
         "@ionic-native/status-bar": "3.12.1",
         "@ionic/storage": "2.0.1",
         "cordova-android": "^6.2.3",
+        "cordova-custom-config": "^4.0.2",
         "cordova-ios": "^4.5.0",
+        "cordova-plugin-camera": "~2.4.1",
         "cordova-plugin-camera-preview": "^0.9.0",
         "cordova-plugin-compat": "^1.1.0",
         "cordova-plugin-console": "^1.0.7",
@@ -43,8 +45,7 @@
         "ionicons": "3.0.0",
         "rxjs": "5.4.0",
         "sw-toolbox": "3.6.0",
-        "zone.js": "0.8.12",
-        "cordova-plugin-camera": "~2.4.1"
+        "zone.js": "0.8.12"
     },
     "devDependencies": {
         "@ionic/app-scripts": "2.1.4",
@@ -63,7 +64,8 @@
             "cordova-plugin-geolocation": {
                 "GEOLOCATION_USAGE_DESCRIPTION": " "
             },
-            "cordova-plugin-camera": {}
+            "cordova-plugin-camera": {},
+            "cordova-custom-config": {}
         },
         "platforms": [
             "android",
