--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "bluebird": "^3.5.0",
+    "body-parser": "^1.18.1",
     "elasticsearch": "^13.3.1",
     "express": "^4.15.4",
     "memory-cache": "^0.2.0",
